<resources>
    <string name="app_name">Nala</string>
    <string name="default_notification_channel_id">Nala</string>
    <string name="fcm_message">Nala</string>
    <string name="pref_is_user_login">IS_USER_LOGIN</string>
    <string name="pref_user_appointment">USER_APPOINTMENT</string>
    <string name="pref_fcm_token">FCM_TOKEN</string>
    <string name="pref_gps_lat">LAT</string>
    <string name="pref_gps_lng">LNG</string>
    <string name="error_blank_email">Enter email or mobile</string>
    <string name="error_invalid_email">Enter valid email</string>
    <string name="error_blank_email_signup">Enter email</string>
    <string name="error_blank_name">Enter name</string>
    <string name="error_blank_about">Enter About Me</string>
    <string name="error_blank_phone">Enter mobile number</string>
    <string name="error_blank_phone_valid">Enter 10 digit mobile number</string>
    <string name="error_blank_password">Enter password</string>
    <string name="error_password_not_matched">Re entered password does not match</string>
    <string name="error_blank_confirm_password">Re enter your password</string>
    <string name="text_norecordfound">No record found</string>
    <string name="message_something_wrong">Something went wrong. Please try after sometime</string>
    <string name="message_noconnection">No connection</string>
    <string name="message_cancel">Cancel</string>
    <string name="message_alert">Alert</string>
    <string name="message_camera_absent">This feature requires camera, and your device does not have one</string>
    <string name="message_unabletochooseimage">Unable to choose image</string>
    <string name="message_unabletochoosedocument">Unable to choose document</string>
    <string name="message_camera_unabletocapture">Unable to capture from camera</string>
    <string name="message_camera_unabletoopen">Unable to open camera</string>
    <string name="text_storage">Storage</string>
    <string name="txt_create_accnt_des">By providing your mobile number to Nala,you \nagree that Nala and pros may use that number to \ncommunicate with you via call and text messages \n(including automatically dialed calls and texts) \nregarding your appoinments and account.</string>
    <string name="permission_camera">Camera permission is needed to capture image</string>
    <string name="permission_location">Location permission is needed to fetch current location</string>
    <string name="permission_externalstorage_camera">External storage permission is needed to
        fetch data captured from camera</string>
    <string name="permission_externalstorage_photogallery">External storage permission is needed to
        fetch image information</string>
    <string name="permission_camera_external">Camera permission is needed to capture image
        and write external storage permission is needed to fetch image captured from camera</string>
    <string name="permission_externalstorage_document">External storage permission is needed to
        fetch document</string>
    <string name="broadcastFragBaseError">broadcastFragBaseError</string>
    <string name="broadcastImageResult">broadcastImageResult</string>
    <string name="broadcastDocumentResult">broadcastDocumentResult</string>
    <string name="bundleDocumentIsAdditional">bundleDocumentIsAdditional</string>
    <string name="bundleDocumentFilePath">bundleDocumentFilePath</string>
    <string name="bundleImageResultStream">bundleImageResultStream</string>
    <string name="bundleImageResultUri">bundleImageResultUri</string>
    <string name="bundleFragBaseError">bundleFragBaseError</string>
    <string name="bundleFragBaseErrorString">bundleFragBaseErrorString</string>
    <string name="text_uploaddocument">Upload Document</string>
    <string name="text_uploadphotousing">Upload photo using</string>
    <string name="text_uploaddocumentusing">Upload document using</string>
    <string name="text_camera">Camera</string>
    <string name="text_request">Request</string>
    <string name="text_photogallery">Photo gallery</string>
    <string name="text_document">Document</string>
    <string name="error_filesize_prefix">Please choose another</string>
    <string name="error_filesize_type_document">document</string>
    <string name="error_filesize_type_image">image</string>
    <string name="error_filesize_type_suffix_min">, as size should be more than or equal to</string>
    <string name="error_filesize_type_suffix_max">, as size should be less than or equal to</string>
    <string name="error_filesize_suffix_min"> </string>
    <string name="error_filesize_suffix_max"> </string>
    <string name="bundleChooserProgressIsToShow">bundleChooserProgressIsToShow</string>
    <string name="str_welcome">Welcome!</string>
    <string name="str_create_acc">Create Account</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_fb">Sign in with Facebook</string>
    <string name="str_sign_apple">Sign in with Apple</string>
    <string name="str_sign_google">Sign in with Google</string>
    <string name="str_email_hint">Email</string>
    <string name="str_password_hint">Password</string>
    <string name="str_forgot_pass">Forgot Password?</string>
    <string name="str_tandc"><![CDATA[By continuing you agree to \n Terms & Conditions and Privacy Policy]]></string>
    <string name="str_forgot_password">Forgot Password</string>
    <string name="str_forgot_password_desc">Please enter your registerd email \n address and we\'ll send you password \n reset instructions</string>
    <string name="str_submit">Submit</string>
    <string name="str_back_to_sign">Back to sign in</string>
    <string name="str_create_desc">You can registered as a Therapist or User</string>
    <string name="str_client">Client</string>
    <string name="str_therapist">Therapist</string>
    <string name="str_name_hint">Name</string>
    <string name="str_phone_hint">Phone Number</string>
    <string name="str_con_password_hint">Confirm Password</string>
    <string name="str_tb_desc"><![CDATA[Agree with Terms & Conditions and \n Privacy Policy]]></string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_min">$25/30 min</string>
    <string name="str_add_photo">Add Photo</string>
    <string name="str_iam">I am</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_booking_min">$75/ 120 min</string>
    <string name="str_aboutme">About Me</string>
    <string name="str_long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="str_max_char">Max 150 characters</string>
    <string name="str_stu_add">My Studio Address</string>
    <string name="str_year">5 Year of experience</string>
    <string name="str_address">Address</string>
    <string name="str_apt">APT #</string>
    <string name="str_add_desc">Your address is never disclosed to anyone except \n your client who books an In-studio appointment</string>
    <string name="str_phone_vari">Phone Varification</string>
    <string name="str_enter_code">Enter 4 digit code</string>
    <string name="str_code_not_receive">Didn\'t Receive the code</string>
    <string name="str_verify">Verify</string>
    <string name="str_success">Success!</string>
    <string name="str_success_text_desc">Congratulations! Your account has \n been successfully created.</string>
    <string name="nav_home">Home</string>
    <string name="str_demo_name">Jessica Marcel</string>
    <string name="str_review_rating">4.5 Reviews</string>
    <string name="str_demo_exp">5 years of experience</string>
    <string name="str_demo_loca">Service Location:</string>
    <string name="str_demo_loca_value">In-studio</string>
    <string name="str_demo_tech">Techniques: Deep Tissue</string>
    <string name="str_demo_rate">4.5</string>
    <string name="str_book_now">Book Now</string>
    <string name="nav_booking">My Bookings</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_profile">Profile</string>
    <string name="str_near">Who near by you</string>
    <string name="str_map_view">Demo Map VIew</string>
    <string name="str_service_pro">Service Pro</string>
    <string name="str_service_loc">Service Location:</string>
    <string name="str_demo_intensity">Intensity Range: Medium</string>
    <string name="str_techniques">Techniques:</string>
    <string name="str_techniques_list">Deep Tissue,Swedish,Sports</string>
    <string name="str_review">Reviews</string>
    <string name="str_choose_time">Choose a time</string>
    <string name="str_no_time_slot_available">No any time available</string>
    <string name="str_massage_type">Massage Type</string>
    <string name="str_success_desc">Your massage has been \n successfully booked!</string>
    <string name="str_success_desc_2">The therapist will reach out \n and suggest another time if they \n cannot at this day and time.</string>
    <string name="str_booking_req">See Booking Request</string>
    <string name="str_my_bookings">My Bookings</string>
    <string name="str_bookings_info">Bookings Info</string>
    <string name="str_verification_msg">We have Sent you an verification code \n to 123 123 1234</string>
    <string name="str_booking_id">Booking ID: 1256</string>
    <string name="error_blank_address">Enter Address</string>
    <string name="error_blank_apt">Enter Apt</string>
    <string name="str_times">10:00 am - 11:00am</string>
    <string name="review_count">4.5</string>
    <string name="str_bullet">•</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_pending">Pending</string>
    <string name="str_cancel_booking">Cancel Booking</string>
    <string name="str_by_d_date">By Delivery Date</string>
    <string name="str_select_here">Select here…</string>
    <string name="str_by_type">By Service Type</string>
    <string name="str_by_status">By Status</string>
    <string name="str_accepted">Accepted</string>
    <string name="str_cancelled">Cancelled</string>
    <string name="str_completed">Completed</string>
    <string name="str_apply">Apply</string>
    <string name="str_filter">Filter</string>
    <string name="str_reset">Reset</string>
    <string name="dummy_date">12 June,2020</string>
    <string name="str_messages">Messages</string>
    <string name="str_notification">Notification</string>
    <string name="str_write_here">Write here…</string>
    <string name="str_rate_service">How was Jessica Marcer  \n Service?</string>
    <string name="str_rating">Excellent Rating!</string>
    <string name="str_write_review">Write your review…</string>
    <string name="str_no_tx">No Thanks</string>
    <string name="str_schedule">Schedule a Massage</string>
    <string name="str_rateandreview"><![CDATA[Give Rate & Review]]></string>
    <string name="str_in_stuidio">In-studio</string>
    <string name="str_city">New York</string>
    <string name="str_msg_type">Message type</string>
    <string name="str_deep_tisue">Deep Tissue</string>
    <string name="price">Price</string>
    <string name="dummy_min">120 min</string>
    <string name="dummy_dollar">$75.00</string>
    <string name="duration">Duration</string>
    <string name="btn_continue">Continue</string>
    <string name="str_add_license">Add License</string>
    <string name="str_add_yor_license">Add Your License</string>
</resources>