<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_specialist"
        android:icon="@drawable/ic_navigations"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/ic_navigations"
        android:title="@string/nav_booking" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_navigations"
        android:title="@string/nav_notification" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_navigations"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_navigations"
        android:title="@string/nav_profile" />



</menu>