<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_curve_view_20"
    android:backgroundTint="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_twenty"
            android:layout_marginTop="@dimen/margin_twenty"
            android:layout_marginBottom="@dimen/margin_twenty"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="@dimen/margin_seven"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_backs" />

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twenty"
            android:layout_marginBottom="@dimen/margin_twenty"
            android:text="@string/str_filter"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_twenty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twenty"
            android:layout_marginEnd="@dimen/textsize_twenty"
            android:layout_marginBottom="@dimen/margin_twenty"
            android:text="@string/str_reset"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_eighteen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:paddingStart="@dimen/margin_twenty"
            android:paddingTop="@dimen/margin_twenty_five"
            android:paddingEnd="@dimen/margin_twenty"
            android:paddingBottom="@dimen/margin_thirty">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_by_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_by_d_date"
                    android:textColor="@color/colorBlueForButtons"
                    android:textSize="@dimen/textsize_eighteen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_five"
                    android:background="@drawable/bg_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_date_text">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_select_here"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textsize_eighteen"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_five"
                        android:src="@drawable/ic_navigations"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_by_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_twenty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_by_date">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_by_type"
                    android:textColor="@color/colorBlueForButtons"
                    android:textSize="@dimen/textsize_eighteen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_five"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_type_text">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_service_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="true"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:spanCount="2"
                        tools:listitem="@layout/adapter_techniques" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_by_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_twenty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_by_type">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_by_status"
                    android:textColor="@color/colorBlueForButtons"
                    android:textSize="@dimen/textsize_eighteen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_five"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_status_text">


                    <Button
                        android:id="@+id/btn_pending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/curve_view_border_yellow"
                        android:paddingStart="@dimen/margin_twenty"
                        android:paddingEnd="@dimen/margin_twenty"
                        android:text="@string/str_pending"
                        android:textColor="@color/colorDarkYellow"
                        app:layout_constraintEnd_toStartOf="@+id/btn_accepted"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_accepted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/curve_view_border_blue"
                        android:paddingStart="@dimen/margin_twenty"
                        android:paddingEnd="@dimen/margin_twenty"
                        android:text="@string/str_accepted"
                        android:textColor="@color/colorBlueForButtons"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_pending"
                        app:layout_constraintTop_toTopOf="parent" />


                    <Button
                        android:id="@+id/btn_cancelled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_ten"
                        android:background="@drawable/curve_view_border_pink"
                        android:paddingStart="@dimen/margin_twenty"
                        android:paddingEnd="@dimen/margin_twenty"
                        android:text="@string/str_cancelled"
                        android:textColor="@color/dark_pink"
                        app:layout_constraintEnd_toStartOf="@+id/btn_accepted"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_pending" />


                    <Button
                        android:id="@+id/btn_completed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_ten"
                        android:background="@drawable/curve_view_border_teal"
                        android:paddingStart="@dimen/margin_twenty"
                        android:paddingEnd="@dimen/margin_twenty"
                        android:text="@string/str_completed"
                        android:textColor="@color/colorTeal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_cancelled"
                        app:layout_constraintTop_toBottomOf="@id/btn_accepted" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_twenty"
                android:background="@drawable/curve_view_360"
                android:backgroundTint="@color/colorBlueForButtons"
                android:paddingStart="@dimen/margin_twenty_five"
                android:paddingEnd="@dimen/margin_twenty_five"
                android:text="@string/str_apply"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_forteen"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_by_status" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>