<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vmAddLicenses"
            type="com.nala.businesslogic.viewmodel.activities.ViewModelAddLicenses" />

        <variable
            name="onContentClickListener"
            type="com.nala.businesslogic.interfaces.OnClickAddLicenses" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_ten"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin_ten" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_ten" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_ten" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_ten"
            android:background="@drawable/top_curve_view"
            app:layout_constraintBottom_toTopOf="@id/btn_continue"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/const_toolbar">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    style="@style/bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_add_yor_license"
                    android:layout_marginTop="@dimen/margin_five"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_twenty_four"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_license"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:adapterAddLicense="@{vmAddLicenses.observerContent}"
                    app:clickListenerAddLicense="@{onContentClickListener}"
                    app:recyclerAddLicense="@{vmAddLicenses.layoutManager}"
                    app:scrollListenerAddLicense="@{vmAddLicenses.scrollListener}"
                    android:layout_marginTop="@dimen/margin_ten"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/title" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/const_add_lincense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:background="@drawable/therapist_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycle_license">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_add_license"
                        style="@style/bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_ten"
                        android:text="@string/str_add_license"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textsize_eighteen"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            style="@style/bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_signup"
            android:text="@string/btn_continue"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_eighteen"
            android:layout_marginBottom="@dimen/margin_ten"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>